CI-CD/argocd-static-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-ilb
  namespace: argocd
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.2.50
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: argocd-server
