CI-CD/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    appgw.ingress.kubernetes.io/ssl-cert-hostname-match: "false"
    appgw.ingress.kubernetes.io/backend-protocol: "https"
    appgw.ingress.kubernetes.io/request-timeout: "60"
    appgw.ingress.kubernetes.io/cookie-based-affinity: "false"
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: argocd.capstone.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
